// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`read csv should get X and y 1`] = `
Object {
  "fields": Array [
    Object {
      "config": Object {},
      "name": "Field 1",
      "type": "string",
      "values": Array [
        "",
        "2",
        "5",
        "",
      ],
    },
    Object {
      "config": Object {},
      "name": "Field 2",
      "type": "number",
      "values": Array [
        1,
        3,
        6,
        NaN,
      ],
    },
    Object {
      "config": Object {},
      "name": "Field 3",
      "type": "number",
      "values": Array [
        null,
        4,
        undefined,
        NaN,
      ],
    },
    Object {
      "config": Object {},
      "name": "Field 4",
      "type": "number",
      "values": Array [
        null,
        null,
        null,
        7,
      ],
    },
  ],
  "labels": undefined,
  "meta": undefined,
  "name": undefined,
  "refId": undefined,
}
`;

exports[`read csv should read csv from local file system 1`] = `
Object {
  "fields": Array [
    Object {
      "config": Object {},
      "name": "a",
      "type": "number",
      "values": Array [
        10,
        40,
      ],
    },
    Object {
      "config": Object {},
      "name": "b",
      "type": "number",
      "values": Array [
        20,
        50,
      ],
    },
    Object {
      "config": Object {},
      "name": "c",
      "type": "number",
      "values": Array [
        30,
        60,
      ],
    },
  ],
  "labels": undefined,
  "meta": undefined,
  "name": undefined,
  "refId": undefined,
}
`;

exports[`read csv should read csv with headers 1`] = `
Object {
  "fields": Array [
    Object {
      "config": Object {
        "unit": "ms",
      },
      "name": "a",
      "type": "number",
      "values": Array [
        10,
        40,
        40,
        40,
      ],
    },
    Object {
      "config": Object {
        "unit": "lengthm",
      },
      "name": "b",
      "type": "number",
      "values": Array [
        20,
        50,
        500,
        50,
      ],
    },
    Object {
      "config": Object {
        "unit": "s",
      },
      "name": "c",
      "type": "boolean",
      "values": Array [
        true,
        false,
        false,
        true,
      ],
    },
  ],
  "labels": undefined,
  "meta": undefined,
  "name": undefined,
  "refId": undefined,
}
`;
